Bug 47410 - connecting to state-changed signal for CallChannels is broken
Summary: connecting to state-changed signal for CallChannels is broken
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-16 07:18 UTC by Seif Lotfy
Modified: 2012-03-16 08:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
call-channel: annotate the state-changed signal (966 bytes, patch)
2012-03-16 07:27 UTC, Guillaume Desmottes
Details | Splinter Review

Description Seif Lotfy 2012-03-16 07:18:42 UTC

    
Comment 1 Seif Lotfy 2012-03-16 07:21:04 UTC
Using Python I have a CallChannel and by doing:
channel.connect("state-changed", call_state_changed)

gives me 

**
ERROR:/build/buildd/pygobject-3.1.1/gi/pygi-argument.c:1748:_pygi_argument_to_object: assertion failed: (g_type_info_get_tag (key_type_info) != GI_TYPE_TAG_VOID)
Aborted (core dumped)


when trying to place a call
Comment 2 Guillaume Desmottes 2012-03-16 07:27:12 UTC
Created attachment 58557 [details] [review]
call-channel: annotate the state-changed signal
Comment 3 Guillaume Desmottes 2012-03-16 08:30:45 UTC
Merged to master for 0.17.7


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.