call-channel: annotate the state-changed signal

https://bugs.freedesktop.org/show_bug.cgi?id=47410